# trtutils

./: .actrc  .coverage-threshold.json  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  MODELS.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.sh  ty.toml
.github/: dependabot.yml
.github/workflows/: black.yaml  build-check.yaml  mypy.yaml  release-publish.yaml  ruff-examples.yaml  ruff-src.yaml  ruff-tests.yaml  ruff.yaml  test-cpu.yaml  test-publish.yaml  ty.yaml  unittests-macos.yaml  unittests-ubuntu.yaml  unittests-windows.yaml
benchmark/: README.md  batch.py  device_info.json  model_utils.py  optimizations.py  plot.py  run.py  table.py  utils.py
benchmark/data/: 3080Ti.json  3090.json  OrinAGX-32GB.json  OrinAGX-64GB.json  OrinAGX.json  OrinNX-16GB.json  OrinNano-8GB.json  TitanRTX.json  XavierNX-8GB.json
benchmark/info/: device_info.json  model_imgsz.json  model_info.json
benchmark/markdown/: OVERVIEW_TABLE.md  overview.md
benchmark/plotting/: __init__.py  batch.py  models.py  optimizations.py  table.py
benchmark/rst/: overview.rst
benchmark/utils/: __init__.py  config.py  data.py  models.py  runners.py  sahi_compat.py  timing.py
ci/: act.sh  build_benchmark_docs.py  build_example_docs.py  check_copyright.sh  check_coverage.py  make_docs.sh  make_stubs.py  make_venv.sh  mypy.sh  run_ci.sh  run_coverage.sh  run_cpu_tests.sh  run_format.sh  run_lint.sh  run_ruff.sh  run_tests.bat  run_tests.sh  run_type_check.sh  test_cu11.sh  test_cu12.sh  test_cu13.sh  test_cuda.sh  validate_docker.sh
data/: .gitignore  simple.onnx  trt_yoloxn.onnx
data/engines/: README.md
data/models/: README.md
data/rtdetrv1/: README.md
data/rtdetrv2/: README.md
data/rtdetrv3/: README.md
data/ultralytics/: .gitignore  README.md
data/yolov10/: README.md
data/yolov11/: README.md
data/yolov12/: README.md
data/yolov7/: README.md
data/yolov8/: README.md
data/yolov9/: README.md
data/yolox/: README.md
demos/: README.md
demos/axonn/: .gitignore  README.md  main.py  requirements.txt
demos/multi_stream/: README.md  main.py  requirements.txt  single.py
demos/webcam/: README.md  _common.py  classifier.py  depth_estimator.py  detector.py  requirements.txt
demos/yolo_webcam/: .gitignore  README.md  main.py  requirements.txt
docker/: Dockerfile.act  Dockerfile.cu11  Dockerfile.cu12  Dockerfile.cu13  Dockerfile.test  README.md  build.sh  docker-compose.test.yml  requirements_cu11.txt  requirements_cu12.txt  requirements_cu13.txt
docs/: Makefile  api.rst  cli.md  cli.rst  conf.py  examples.rst  index.rst  installation.rst  models.rst  requirements.txt  usage.rst
docs/_static/: center.css  theme_overrides.css
docs/benchmark/: 3080ti.rst  3090.rst  index.rst  jetson.rst  orinagx-32gb.rst  orinagx-64gb.rst  orinagx.rst  orinnano-8gb.rst  orinnx-16gb.rst  rtx.rst  titanrtx.rst  xaviernx-8gb.rst
docs/benchmarks/: overview.md
docs/examples/: engine.rst  model.rst
docs/source/: modules.rst  trtutils.backends.rst  trtutils.builder.rst  trtutils.core.cache.rst  trtutils.core.rst  trtutils.impls.common.rst  trtutils.impls.kernels.rst  trtutils.impls.onnx_models.rst  trtutils.impls.rst  trtutils.impls.yolo.rst  trtutils.inspect.rst  trtutils.jetson.rst  trtutils.rst  trtutils.trtexec.rst
docs/tutorials/: advanced.rst  basic.rst  overview.rst  yolo.rst
docs/usage/: advanced.rst  basic.rst  general.rst  implementations.rst  index.rst  strongly_typed.rst
examples/: benchmark.py  build.py  classifier.py  config.py  core.py  depth_estimator.py  detector.py  engine.py  flexpatch_example.py  inspect.py  jetson.py  kernel.py  model.py  profile.py  remix_example.py  sahi.py  trtexec.py
examples/builder/: dla.py
examples/image/: classifier.py  depth_estimator.py  detector.py  sahi.py
examples/impls/: yolo.py
plans/test_overhaul_init/: findings.md  phase0_audit.md  phase0_infrastructure.md  phase1_core.md  phase2_engine.md  phase3_precommit.md  phase4_builder.md  phase5_download_inspect_models.md  phase6_image_port.md  progress.md  task_plan.md
scripts/: DETECTOR_INTERFACE_COMPATIBILITY.md  cuda_graph_compat.py  diagnose_flexpatch.py  download_all.sh  download_rtdetr_models.sh  download_yolo_models.sh  eval_yolo.py  export_tv_classifier.py  install_pycuda.sh  install_pycuda_jetson.sh  make_onnx.py  make_preproc_onnx.py  make_simple_onnx.py  nsys_profile.sh  test_detector_interface.py  test_download.sh  test_flexpatch.py  test_flexpatch_fallback.py  train_flexpatch_mot17.py  train_flexpatch_simple.py  train_remix.py  train_remix_mot17.py  train_remix_simple.py  validate_flexpatch.py  validate_remix.py
scripts/ci/: mypy.sh
scripts/flexpatch/: FLEXPATCH_TEST_RESULTS.md  FLEXPATCH_TRAINING_SUMMARY.md  FLEXPATCH_VALIDATION_RESULTS.md  HIGH_LEVEL_DESCRIPTION.md  IMPLEMENTATION_SUMMARY.md  PSEUDOCODE.md  README.md  __init__.py  _core.py  _recommender.py
scripts/flexpatch_training/: flexpatch_model.joblib  training_data.csv
scripts/remix/: HIGH_LEVEL_DESCRIPTION.md  PSEUDOCODE.md  REMIX_TRAINING_SUMMARY.md  REMIX_USAGE.md  REMIX_VALIDATION_RESULTS.md
scripts/remix_data/: QUICKSTART.md  README.md  plans_mot17.json  profiles_mot17.json
src/trtutils/: __init__.py  __main__.py  _benchmark.py  _build.py  _config.py  _engine.py  _flags.py  _jit.py  _log.py  _model.py  _nengine.py  _nvtx.py  _profile.py  _trtexec.py
tests/: .gitignore  README.md  __init__.py  _cpu_stubs.py  _gpu_fixtures.py  common.py  conftest.py  export_classifier_onnx.py  ground_truth.py  helpers.py  paths.py  test_benchmark.py  test_cli.py  test_cuda_graph.py  test_end2end_graph.py  test_engine.py  test_inference_modes.py  test_model.py  test_namespace.py
tests/benchmark/: conftest.py  test_benchmark_engine.py  test_benchmark_engines.py  test_benchmark_result.py  test_metric.py
tests/builder/: _gpu_fixtures.py  conftest.py  test_batcher.py  test_build.py  test_calibrator.py  test_dla.py  test_hooks.py  test_image_batcher.py  test_onnx.py  test_onnx_utils.py  test_progress.py  (+2 more)
trtutils/: __init__.py
(+531 files in other folders)
