[build-system]
requires = [
    "setuptools>=64",
    "tomli; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "trtutils"
version = "0.7.0"
authors = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
maintainers = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
description = "Utilities for making TensorRT easier to use"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Typing :: Typed",
]
requires-python=">=3.8, <=3.14"
dependencies = [
    "cv2ext>=0.1.0",
    "opencv-python>=4.8.0,<5.0.0",
    "numpy>=1.19.0,<3.0.0",
    "nvtx>=0.2.14",
    "jetsontools>=0.1.0",
    "tqdm>=4.67.1,<5.0.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/justincdavis/trtutils"
"Bug Tracker" = "https://github.com/justincdavis/trtutils/issues"

[project.optional-dependencies]
# runtime/library dependencies
cu11 = [
    "cuda-python==11.*",
    "tensorrt_cu11>=8.0.0",
]
cu12 = [
    "cuda-python==12.*",
    "tensorrt_cu12>=10.0.0",
]
cu13 = [
    "cuda-python==13.*",
    "tensorrt_cu13>=10.13.0",
]
onnx = [
    "onnx>=1.17.0,<2.0.0",
    "onnxslim>=0.1.72,<1.0.0",
    "onnxsim>=0.4.36,<1.0.0",
    "polygraphy>=0.49.26,<1.0.0",
    "onnx-graphsurgeon>=0.5.8,<1.0.0",
    "nvidia-modelopt[onnx]>=0.21.1,<1.0.0",
]
jit = [
    "numba>=0.58.0,<1.0.0",
]
axonn = [
    "z3-solver>=4.12.0,<5.0.0",
]
# buildtime/offline dependencies
benchmark = [
    "trtutils[torch]",
    "trtutils[sahi]",
]
compat = [
    "trtutils[torch]",
    "trtutils[sahi]",
]
ci = [
    "ruff==0.15.1",
    "ty==0.0.17",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx_design>=0.6.1",
    "furo>=2024.8.6",
    "myst_parser>=4.0.0",
    "matplotlib>=3.0.0",
]
test = [
    "pytest>=6.2.0,<8.5",
]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
sahi = [
    "ultralytics>=8.3.100",
    "sahi>=0.11.31",
]
dev = [
    "trtutils[cpu]",
    "trtutils[jit]",
    "trtutils[axonn]",
    "trtutils[benchmark]",
    "trtutils[compat]",
    "trtutils[ci]",
    "trtutils[docs]",
    "trtutils[test]",
    "trtutils[torch]",
    "trtutils[sahi]",
    "twine>=4.0.0",
    "wheel>=0.37.0",
    "bumpver>=2023.1126",
    "pyclean>=2.7.0",
    "pre-commit>=4.5.0",
]

[tool.bumpver]
current_version = "0.7.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/trtutils/__init__.py" = ["{version}"]
"docs/conf.py" = ["{version}"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trtutils = [
    "src/*.cu",
    "src/*.onnx",
    "src/trtutils/download/patches/*.patch",
    "src/trtutils/download/configs/*.json",
    "src/trtutils/download/requirements/*.txt",
    "src/trtutils/download/requirements_tools/*.txt",
    "src/trtutils/py.typed",
]
