[build-system]
requires = [
    "setuptools>=64",
    "tomli; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "trtutils"
version = "0.7.0"
authors = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
maintainers = [
  {name="Justin Davis", email="davisjustin302@gmail.com"},
]
description = "Utilities for making TensorRT easier to use"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Typing :: Typed",
]
requires-python=">=3.8, <3.15"
dependencies = [
    "cv2ext>=0.1.0",
    "opencv-python>=4.8.0,<5.0.0",
    "numpy>=1.19.0,<3.0.0",
    "nvtx==0.2.15; python_version == '3.8'",
    "nvtx>=0.2.14; python_version >= '3.9'",
    "jetsontools>=0.1.0",
    "tqdm>=4.67.1,<5.0.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/justincdavis/trtutils"
"Bug Tracker" = "https://github.com/justincdavis/trtutils/issues"

[project.optional-dependencies]
# runtime/library dependencies
# Jetpack 5 uses CUDA 11, but provides TensorRT
# repeat pattern for each Jetpack/CUDA version
# Jetpack 5 / CUDA 11
cu11 = [
    "cuda-python==11.*",
    "tensorrt_cu11>=8.0.0",
]
jp5 = [
    "cuda-python==11.*",
]
# Jetpack 6 / CUDA 12
cu12 = [
    "cuda-python==12.*",
    "tensorrt_cu12>=10.0.0",
]
jp6 = [
    "cuda-python==12.*",
]
# Jetpack 7 / CUDA 13
cu13 = [
    "cuda-python==13.*",
    "tensorrt_cu13>=10.13.0",
]
jp7 = [
    "cuda-python==13.*",
]
# ONNX support
onnx = [
    "onnx>=1.17.0,<2.0.0",
    "onnx-graphsurgeon>=0.5.8,<1.0.0",
]
# Numba JIT
jit = [
    "numba>=0.58.0,<1.0.0",
]
# Quantize CLI/API tools
quantize = [
    "trtutils[onnx]",
    "nvidia-modelopt[onnx]>=0.17.0",
]
# Compatibility integrations via trtutils.compat module
# SAHI/PyTorch
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
sahi = [
    "trtutils[torch]",
    "ultralytics>=8.3.100",
    "sahi>=0.11.31",
]
# Meta compat module deps
compat = [
    "trtutils[torch]",
    "trtutils[sahi]",
]
# Research packages
# AxoNN
axonn = [
    "trtutils[onnx]",
    "z3-solver>=4.12.0,<5.0.0",
]
# Buildtime/Offline deps
# Mainly used for internal tools like the benchmark folder
# OR
# Deps for compatiblity integrations in the trtutils.compat module
benchmark = [
    "trtutils[torch]",
    "trtutils[sahi]",
]
ci = [
    "ruff==0.15.11",
    "ty==0.0.31",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx_design>=0.6.1",
    "furo>=2024.8.6",
    "myst_parser>=4.0.0",
    "matplotlib>=3.0.0",
]
pytest = [
    "pytest>=6.2.0,<8.5",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
]
test = [
    "trtutils[onnx]",
    "trtutils[pytest]",
]
dev = [
    "trtutils[cpu]",
    "trtutils[jit]",
    "trtutils[quantize]",
    "trtutils[axonn]",
    "trtutils[benchmark]",
    "trtutils[compat]",
    "trtutils[ci]",
    "trtutils[docs]",
    "trtutils[test]",
    "trtutils[torch]",
    "trtutils[sahi]",
    "twine>=4.0.0",
    "wheel>=0.37.0",
    "bumpver>=2023.1126",
    "pyclean>=2.7.0",
    "pre-commit>=4.5.0",
]

[tool.bumpver]
current_version = "0.7.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/trtutils/__init__.py" = ["{version}"]
"docs/conf.py" = ["{version}"]

[tool.coverage.run]
source = ["src/trtutils"]
branch = true
omit = [
    "src/trtutils/compat/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "@abstractmethod",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trtutils = [
    "src/*.cu",
    "src/*.onnx",
    "src/trtutils/download/patches/*.patch",
    "src/trtutils/download/configs/*.json",
    "src/trtutils/download/requirements/*.txt",
    "src/trtutils/download/requirements_tools/*.txt",
    "src/trtutils/py.typed",
]
